# hyperevolution

./: Cargo.toml  PERFORMANCE.md  README.md
benches/: fitness.rs
src/: domain.rs  fitness.rs  gp.rs  identity.rs  lib.rs  oracle.rs  search.rs
tests/: dispatch_trace.rs  fitness.rs
