[package]
name = "hyperevolution"
version = "0.3.0"
edition = "2024"
description = "Exact-aware evolutionary and proposal-search carriers for the Hyper ecosystem"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/timschmidt/hyperevolution"
keywords = ["evolution", "optimization", "search", "hyperreal", "simulation"]
categories = ["algorithms", "science", "simulation"]

[features]
default = []
dispatch-trace = ["hyperreal/dispatch-trace"]

[dependencies]
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path line. For release, comment it and uncomment the crates.io line.
hyperreal = { path = "../hyperreal" }
# hyperreal = { version = "0.13.1" }
[dev-dependencies]
proptest = "1.7.0"

[[bench]]
name = "fitness"
harness = false
